@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.70 2005/01/13 16:15:52 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.71 2005/01/14 10:25:33 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -316,6 +316,11 @@ Exim version 4.50
 71. Change 4.23/11 added synchronization checking at the start of an SMTP
     session; change 4.31/43 added the unwanted input to the log line - except
     that it did not do this in the start of session case. It now does.
+
+72. After a timeout in a callout SMTP session, Exim still sent a QUIT command.
+    This is wrong and can cause the other end to generate a synchronization
+    error if it is another Exim or anything else that does the synchronization
+    check. A QUIT command is no longer sent after a timeout.
 
 
 Exim version 4.43
